--- a/xpage/index.xpage.template
+++ b/xpage/index.xpage.template
@@ -72,105 +72,104 @@
 		</div>
 	    </div>
 	    <div class="homepage_box_content">
-		<td><a href="https://www.youtube.com/user/Creorder">Creorder Videos</a></td>
-		<td>– Videos of CasP conferences, presentations, talks, debates and interviews</td>
-	    </tr>
-	    <tr>
-		<td><a href="http://www.capitalaspower.com">Capital as Power</a></td>
-		<td>– CasP blog, forum, publications, working papers, data and events</td>
-	    </tr>
-	    <tr>
-		<td><a href="http://www.recasp.com">RECASP</a></td>
-		<td>– <i>Review of Capital as Power</i> (Journal)</td>
-	    </tr>
-	</table>
-
-
-    </div>
-</div>
-
-
-<!-- mailchimp -->
-<div class="homepage_box">
-    <div class="homepage_heading_panel">
-	<div class="homepage_box_heading">
-	    Updates
-	</div>
-    </div>
-    <div class="homepage_box_content">
-
-	<p>Sign-up to receive periodic alerts of new items:</p>
-
-	<!-- Begin MailChimp Signup Form -->
-	<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css"/>
-	<style type="text/css">
-	    #mc_embed_signup {
-	    clear:left; 
-	    width:100%;
-	    margin-top: 3px;
-	    margin-bottom: 3px;
-	    }
-	    #mc_embed_signup input.email { 
-	    font-family: sans-serif;
-	    height: 25px;
-	    font-size: 95%;
-	    }
-	    #mc_embed_signup .button {
-	    font-size: 95%;
-	    height: 25px;
-	    line-height: 25px;
-	    }
-	</style>
-	<div id="mc_embed_signup">
-	    <form action="//yorku.us13.list-manage.com/subscribe/post?u=bb99df23cb4f0749885ca4465&amp;id=7e3e7832fa" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-		<div id="mc_embed_signup_scroll">
-
-		    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required="required"/>
-		    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-		    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="bb99df23cb4f0749885ca4465&amp;id=7e3e7832fa" tabindex="-1" value=""/></div>
-		    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"/></div>
-		</div>
-	    </form>
+		<table>
+		    <td><a href="https://www.youtube.com/user/Creorder">Creorder Videos</a></td>
+		    <td>– Videos of CasP conferences, presentations, talks, debates and interviews</td>
+		</tr>
+		<tr>
+		    <td><a href="http://www.capitalaspower.com">Capital as Power</a></td>
+		    <td>– CasP blog, forum, publications, working papers, data and events</td>
+		</tr>
+		<tr>
+		    <td><a href="http://www.capitalaspower.com/recasp">RECASP</a></td>
+		    <td>– <i>Review of Capital as Power</i> (Journal)</td>
+		</tr>
+	    </table>
 	</div>
     </div>
 
-</div>
+
+    <!-- mailchimp -->
+    <div class="homepage_box">
+	<div class="homepage_heading_panel">
+	    <div class="homepage_box_heading">
+		Updates
+	    </div>
+	</div>
+	<div class="homepage_box_content">
+
+	    <p>Sign-up to receive periodic alerts of new items:</p>
+
+	    <!-- Begin MailChimp Signup Form -->
+	    <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css"/>
+	    <style type="text/css">
+		#mc_embed_signup {
+		clear:left; 
+		width:100%;
+		margin-top: 3px;
+		margin-bottom: 3px;
+		}
+		#mc_embed_signup input.email { 
+		font-family: sans-serif;
+		height: 25px;
+		font-size: 95%;
+		}
+		#mc_embed_signup .button {
+		font-size: 95%;
+		height: 25px;
+		line-height: 25px;
+		}
+	    </style>
+	    <div id="mc_embed_signup">
+		<form action="//yorku.us13.list-manage.com/subscribe/post?u=bb99df23cb4f0749885ca4465&amp;id=7e3e7832fa" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+		    <div id="mc_embed_signup_scroll">
+
+			<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required="required"/>
+			<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="bb99df23cb4f0749885ca4465&amp;id=7e3e7832fa" tabindex="-1" value=""/></div>
+			<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"/></div>
+		    </div>
+		</form>
+	    </div>
+	</div>
+
+    </div>
 
 
-<div class="homepage_box">
-    <div class="homepage_heading_panel">
-	<div class="homepage_box_heading">
-	    About
+    <div class="homepage_box">
+	<div class="homepage_heading_panel">
+	    <div class="homepage_box_heading">
+		About
+	    </div>
+	</div>
+	<div class="homepage_box_content">
+	    <ul>
+		<li>Shimshon Bichler teaches political economy at colleges and universities in Israel (<a href="mailto:tookie@barak.net.il">tookie@barak.net.il</a>) </li>
+		<li>Jonathan Nitzan teaches political economy at York University in Canada (<a href="mailto:nitzan@yorku.ca">nitzan@yorku.ca</a>) </li>
+	    </ul>
 	</div>
     </div>
-    <div class="homepage_box_content">
-	<ul>
-	    <li>Shimshon Bichler teaches political economy at colleges and universities in Israel (<a href="mailto:tookie@barak.net.il">tookie@barak.net.il</a>) </li>
-	    <li> Jonathan Nitzan teaches political economy at York University in Canada (<a href="mailto:nitzan@yorku.ca">nitzan@yorku.ca</a>) </li>
-	</ul>
+
+
+    <!-- rss -->
+
+    <div style="text-align: center;margin-top:20px;margin-bottom:20px">
+	<span class="ep_search_feed"><a href="{$config{rel_cgipath}}/latest_tool?output=Atom"><img alt="[feed]" src="{$config{rel_path}}/style/images/feed-icon-14x14.png" border="0" /></a> <a href="{$config{rel_cgipath}}/latest_tool?output=Atom">Atom</a></span>
+	<span class="ep_search_feed"><a href="{$config{rel_cgipath}}/latest_tool?output=RSS"><img alt="[feed]" src="{$config{rel_path}}/style/images/feed-icon-14x14.png" border="0" /></a> <a href="{$config{rel_cgipath}}/latest_tool?output=RSS">RSS 1.0</a></span>
+	<span class="ep_search_feed"><a href="{$config{rel_cgipath}}/latest_tool?output=RSS2"><img alt="[feed]" src="{$config{rel_path}}/style/images/feed-icon-14x14.png" border="0" /></a> <a href="{$config{rel_cgipath}}/latest_tool?output=RSS2">RSS 2.0</a></span>
     </div>
-</div>
 
 
-<!-- rss -->
+    <!-- creative commons -->
+    <div class="creative-commons">
+	<a href="http://creativecommons.org/licenses/by-nc-nd/4.0/" title="Creative Commons"> <img  alt="{phrase('archive_name')}" width="100px" src="/images/somerights.png"/></a>
+	<div> This site is licensed under a Creative Commons License (Attribution-NonCommercial-NoDeriatives).</div>
 
-<div style="text-align: center;margin-top:20px;margin-bottom:20px">
-    <span class="ep_search_feed"><a href="{$config{rel_cgipath}}/latest_tool?output=Atom"><img alt="[feed]" src="{$config{rel_path}}/style/images/feed-icon-14x14.png" border="0" /></a> <a href="{$config{rel_cgipath}}/latest_tool?output=Atom">Atom</a></span>
-    <span class="ep_search_feed"><a href="{$config{rel_cgipath}}/latest_tool?output=RSS"><img alt="[feed]" src="{$config{rel_path}}/style/images/feed-icon-14x14.png" border="0" /></a> <a href="{$config{rel_cgipath}}/latest_tool?output=RSS">RSS 1.0</a></span>
-    <span class="ep_search_feed"><a href="{$config{rel_cgipath}}/latest_tool?output=RSS2"><img alt="[feed]" src="{$config{rel_path}}/style/images/feed-icon-14x14.png" border="0" /></a> <a href="{$config{rel_cgipath}}/latest_tool?output=RSS2">RSS 2.0</a></span>
-</div>
-
-
-<!-- creative commons -->
-<div class="creative-commons">
-    <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/" title="Creative Commons"> <img  alt="{phrase('archive_name')}" width="100px" src="/images/somerights.png"/></a>
-    <div> This site is licensed under a Creative Commons License (Attribution-NonCommercial-NoDeriatives).</div>
-
-</div>
+    </div>
 
 
 
 
 
-    </xpage:body>
+</xpage:body>
 </xpage:page>
